# hyphen

./: .gitignore  build-py.sh  build.sh  hyphen-dummy.cabal  index.js  node-haskell.cabal  package-lock.json  package.json  stack.yaml
hyphen/: __init__.py  build-extn.py  caches.py  hsobj.py  marshall_ctor.py  marshall_obj_to_hs.py  source_loading.py  utils.py
hyphen/lowlevel_src/: HsObjRaw.hs  HsType.hs  Hyphen.hs  HyphenBase.hs  HyphenExceptions.hs  HyphenGHC.hs  HyphenKinds.hs  HyphenTyCon.hs  HyphenUnify.hs  HyphenWrapping.hs  PythonBase.hs  Pythonate.hs  hyphen_c.c
src/: Test.hs  binding.c
