name:                node-haskell
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base,
                       text,
                       transformers,
                       mtl,
                       parsec,
                       hashable,
                       unordered-containers,
                       ghc-paths
  -- build-depends:       array,
  --                      base,
  --                      containers,
  --                      Cabal,
  --                      directory,
  --                      filepath,
  --                      ghc,
  --                      ghc-prim,
  --                      haskell-src,
  --                      process,
  --                      random,
  --                      split,
  --                      ghc-paths,
  --                      hashable,
  --                      mtl,
  --                      parsec,
  --                     --  plugins,
  --                      text,
  --                      transformers,
  --                      unordered-containers
  default-language:    Haskell2010
