cabal-version:       3.4
name:                node-haskell
version:             0.1.0.0

common warnings
  ghc-options: -Wall

library
  build-depends:    base,
                    text,
                    transformers,
                    mtl,
                    parsec,
                    hashable,
                    unordered-containers,
                    ghc-paths
--                  array,
--                  base,
--                  containers,
--                  Cabal,
--                  directory,
--                  filepath,
--                  ghc,
--                  ghc-prim,
--                  haskell-src,
--                  process,
--                  random,
--                  split,
--                  ghc-paths,
--                  hashable,
--                  mtl,
--                  parsec,
--                  plugins,
--                  text,
--                  transformers,
--                  unordered-containers
  hs-source-dirs:   src
  default-language: GHC2021
